@@ -22,7 +22,7 @@ project (XSC_XML_Handlers) : acelib, xerces {
 }
 
 project (XSC_Config_Handlers) : acelib, ciao_deployment_stub, xerces {
-  after += RT_CCM_Config_Handlers XSC_XML_Handlers
+  after += RT_CCM_Config_Handlers XSC_XML_Handlers XSC_DynAny_Handler
   sharedname = XSC_Config_Handlers
   dynamicflags   = CONFIG_HANDLERS_BUILD_DLL
   macros   += XML_USE_PTHREADS
